# TGEngine

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  readme.md  test.sh
.github/workflows/: build_linux.yml  build_macOS.yml  build_windows.yml  ci.yml  comp-run.yml  compile.yml  release.yml  tests.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: config.hpp  game.hpp  helpers.hpp  play.hpp  player.hpp  stats.hpp  timer.hpp
src/: algorithm.cpp  config.cpp  game.cpp  helpers.cpp  main.cpp  play.cpp  player.cpp  stats.cpp  timer.cpp
tests/: CMakeLists.txt  test_algorithm.cpp  test_game.cpp  test_player.cpp
